<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>AddRace</class>
 <widget class="QDialog" name="AddRace">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>487</width>
    <height>359</height>
   </rect>
  </property>
  <property name="font">
   <font>
    <family>Mongolian Baiti</family>
   </font>
  </property>
  <property name="windowTitle">
   <string>Dialog</string>
  </property>
  <widget class="QWidget" name="layoutWidget">
   <property name="geometry">
    <rect>
     <x>10</x>
     <y>20</y>
     <width>473</width>
     <height>331</height>
    </rect>
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <item row="0" column="0" colspan="4">
     <widget class="QLabel" name="mainLabel">
      <property name="font">
       <font>
        <family>Mongolian Baiti</family>
        <pointsize>16</pointsize>
       </font>
      </property>
      <property name="text">
       <string>Добавление/редактирование рейса</string>
      </property>
      <property name="alignment">
       <set>Qt::AlignCenter</set>
      </property>
     </widget>
    </item>
    <item row="7" column="0">
     <widget class="QLabel" name="labelError">
      <property name="font">
       <font>
        <pointsize>10</pointsize>
       </font>
      </property>
      <property name="styleSheet">
       <string notr="true">QLabel { color: rgb(240, 0, 0); }</string>
      </property>
      <property name="text">
       <string/>
      </property>
      <property name="alignment">
       <set>Qt::AlignCenter</set>
      </property>
     </widget>
    </item>
    <item row="9" column="0" colspan="4">
     <widget class="QDialogButtonBox" name="buttonBox">
      <property name="font">
       <font>
        <family>Mongolian Baiti</family>
        <pointsize>12</pointsize>
       </font>
      </property>
      <property name="standardButtons">
       <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
      </property>
     </widget>
    </item>
    <item row="6" column="0">
     <widget class="QLabel" name="countSeats">
      <property name="font">
       <font>
        <family>Mongolian Baiti</family>
        <pointsize>10</pointsize>
       </font>
      </property>
      <property name="text">
       <string>Количество мест:</string>
      </property>
     </widget>
    </item>
    <item row="5" column="0">
     <widget class="QLabel" name="mark">
      <property name="font">
       <font>
        <family>Mongolian Baiti</family>
        <pointsize>10</pointsize>
       </font>
      </property>
      <property name="text">
       <string>Марка самолета:</string>
      </property>
     </widget>
    </item>
    <item row="4" column="0">
     <widget class="QLabel" name="arrival">
      <property name="font">
       <font>
        <family>Mongolian Baiti</family>
        <pointsize>10</pointsize>
       </font>
      </property>
      <property name="text">
       <string>Пункт назначения:</string>
      </property>
     </widget>
    </item>
    <item row="3" column="0">
     <widget class="QLabel" name="departure">
      <property name="font">
       <font>
        <family>Mongolian Baiti</family>
        <pointsize>10</pointsize>
       </font>
      </property>
      <property name="text">
       <string>Пункт отправления:</string>
      </property>
     </widget>
    </item>
    <item row="2" column="0">
     <widget class="QLabel" name="number">
      <property name="font">
       <font>
        <family>Mongolian Baiti</family>
        <pointsize>10</pointsize>
       </font>
      </property>
      <property name="text">
       <string>Номер самолета:</string>
      </property>
     </widget>
    </item>
    <item row="1" column="1">
     <spacer name="verticalSpacer">
      <property name="orientation">
       <enum>Qt::Vertical</enum>
      </property>
      <property name="sizeHint" stdset="0">
       <size>
        <width>20</width>
        <height>40</height>
       </size>
      </property>
     </spacer>
    </item>
    <item row="8" column="1">
     <spacer name="verticalSpacer_2">
      <property name="orientation">
       <enum>Qt::Vertical</enum>
      </property>
      <property name="sizeHint" stdset="0">
       <size>
        <width>20</width>
        <height>40</height>
       </size>
      </property>
     </spacer>
    </item>
    <item row="7" column="2" colspan="2">
     <widget class="QPushButton" name="buttonEditPassengers">
      <property name="font">
       <font>
        <family>Mongolian Baiti</family>
        <pointsize>10</pointsize>
       </font>
      </property>
      <property name="text">
       <string>Управление пассажирами</string>
      </property>
     </widget>
    </item>
    <item row="2" column="1" colspan="3">
     <widget class="QLineEdit" name="edit_number">
      <property name="font">
       <font>
        <family>Mongolian Baiti</family>
        <pointsize>10</pointsize>
       </font>
      </property>
     </widget>
    </item>
    <item row="3" column="1" colspan="3">
     <widget class="QLineEdit" name="edit_departure">
      <property name="font">
       <font>
        <family>Mongolian Baiti</family>
        <pointsize>10</pointsize>
       </font>
      </property>
     </widget>
    </item>
    <item row="4" column="1" colspan="3">
     <widget class="QLineEdit" name="edit_arrival">
      <property name="font">
       <font>
        <family>Mongolian Baiti</family>
        <pointsize>10</pointsize>
       </font>
      </property>
     </widget>
    </item>
    <item row="5" column="1" colspan="3">
     <widget class="QLineEdit" name="edit_mark">
      <property name="font">
       <font>
        <family>Mongolian Baiti</family>
        <pointsize>10</pointsize>
       </font>
      </property>
     </widget>
    </item>
    <item row="6" column="1" colspan="3">
     <widget class="QSpinBox" name="edit_countSeats">
      <property name="maximum">
       <number>999</number>
      </property>
     </widget>
    </item>
   </layout>
  </widget>
 </widget>
 <resources/>
 <connections>
  <connection>
   <sender>buttonBox</sender>
   <signal>accepted()</signal>
   <receiver>AddRace</receiver>
   <slot>accept()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>193</x>
     <y>231</y>
    </hint>
    <hint type="destinationlabel">
     <x>193</x>
     <y>126</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>buttonBox</sender>
   <signal>rejected()</signal>
   <receiver>AddRace</receiver>
   <slot>reject()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>193</x>
     <y>231</y>
    </hint>
    <hint type="destinationlabel">
     <x>193</x>
     <y>126</y>
    </hint>
   </hints>
  </connection>
 </connections>
</ui>
